# Asterindes

./: .gitignore  CMakeLists.txt  README.md
development/inc/: AsterindesApp.h  AsterindesCore.h  GuiClient.h  ProjectManager.h  ResourceListModel.h  ResourcesManager.h  ResourcesViewModel.h
development/res/: Main.qml  ResourceBroadcastPanel.qml  ResourceBroadcastingPanel.qml  ResourcePreview.qml  ResourcePreviewPanel.qml  ResourcesGridPanel.qml
development/src/: AsterindesApp.cpp  AsterindesCore.cpp  AsterindesMain.cpp  GuiClient.cpp  ProjectManager.cpp  ResourceListModel.cpp  ResourcesManager.cpp  ResourcesViewModel.cpp  asterindes.cpp
